# matrix-relay-bot

./: Cargo.toml
src/: main.rs
