[package]
edition = "2021"
name = "matrix-relay-bot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
# matrix-sdk = "0.5.0"
reqwest = "0.11.4"
# ruma = { version = "0.6.4", features = [
#     "client-api-c",
#     "client-ext-client-api",
#     "client-reqwest",
# ] }
tokio = { version = "1.20.1", features = ["full"] }
tracing-subscriber = "0.3.15"
url = "2.2.2"

[dependencies.matrix-sdk]
path = "../../work/matrix-rust-sdk/crates/matrix-sdk"
